2017-06-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Karol Babioch:
	patch #8536: Fix a typo within <stdio.h>
	* include/stdio.h: Fix small typo.

2017-06-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Georg-Johann Lay:
	patch #8729: [avr/interrupt.h] Add ISR_NOICF, ISR_FLATTEN. Fix namespace of identifiers.
	* include/avr/interrupt.h: Add ISR_NOICF, ISR_FLATTEN

2017-03-31  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/util/eu_dst.h: Fix reversed DST decision logic for March
	and October.

2017-03-07  Pitchumani Sivanupandi <pitchumani.sivanupandi@microchip.com>

	Fix for bug #50439: avr/iom32u4.h does not define PRTIM4
	* include/avr/iom16u4.h (PRTIM4): Define.
	(__AVR_HAVE_PRR1): Update definition.
	(__AR_HAVE_PRR1_PRTIM4): Define.
	* include/avr/iom33u4.h: Likewise.