@@ -250,9 +250,10 @@ main(void)
 
     This is a possible parameter for ATOMIC_BLOCK. When used, it will
     cause the ATOMIC_BLOCK to force the state of the SREG register on
-    exit, enabling the Global Interrupt Status flag bit. This saves on
-    flash space as the previous value of the SREG register does not
-    need to be saved at the start of the block.
+    exit, enabling the Global Interrupt Status flag bit. This saves a
+    small amout of flash space, a register, and one or more processor
+    cycles, since the previous value of the SREG register does not need
+    to be saved at the start of the block.
 
     Care should be taken that ATOMIC_FORCEON is only used when it is
     known that interrupts are enabled before the block's execution or
@@ -290,7 +291,8 @@ main(void)
     This is a possible parameter for NONATOMIC_BLOCK. When used, it
     will cause the NONATOMIC_BLOCK to force the state of the SREG
     register on exit, disabling the Global Interrupt Status flag
-    bit. This saves on flash space as the previous value of the SREG
+    bit.  This saves a small amout of flash space, a register, and one
+    or more processor cycles, since the previous value of the SREG
     register does not need to be saved at the start of the block.
 
     Care should be taken that NONATOMIC_FORCEOFF is only used when it
