@@ -1,5 +1,11 @@
 2017-06-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
+	Submitted by Britton Kerin:
+	patch #8649: small documentation fixes in
+	* include/util/atomic.h: Improve documentation.
+
+2017-06-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
 	Submitted by Karol Babioch:
 	patch #8536: Fix a typo within <stdio.h>
 	* include/stdio.h: Fix small typo.
